# SmartHome-App

./: CMakeLists.txt  CONTRIBUTING.md  DataStructures.h  INTERFACE_CONTRACT.md  LICENSE  Main.qml  README.md  backend.cpp  backend.h  main.cpp
Backend/: AirConditioner.cpp  AirConditioner.h  AlertSystem.cpp  AlertSystem.h  Device.cpp  EnergyTracker.cpp  EnergyTracker.h  Fan.cpp  Fridge.cpp  Light.h  Microwave.h  SmartHomeManager.cpp  SmartHomeManager.h  TV.cpp  TV.h  WashingMachine.h
Simulator/: SimulationEngine.cpp
SmartHomeProject/: DataStructures.h  README.md  README_BAO_INTEGRATION.txt  SmartHomeProject.pro  main.cpp
SmartHomeProject/Backend/: AirConditioner.cpp  AirConditioner.h  AlertSystem.cpp  AlertSystem.h  Curtain.cpp  Curtain.h  Device.cpp  Device.h  EnergyTracker.cpp  EnergyTracker.h  Fan.cpp  Fan.h  Fridge.cpp  Fridge.h  Light.cpp  Light.h  Microwave.cpp  Microwave.h  RiceCooker.cpp  RiceCooker.h  SmartHomeManager.cpp  SmartHomeManager.h  TV.cpp  TV.h  WashingMachine.cpp  WashingMachine.h  WaterHeater.cpp  WaterHeater.h
SmartHomeProject/Backend/SmartHomeManager/: ClassDiagram.md
SmartHomeProject/Frontend/: CustomChart.cpp  CustomChart.h  MainWindow.h  MainWindow.ui
SmartHomeProject/Simulator/: SimulationEngine.cpp  SimulationEngine.h
